# datafusion-statrs

./: Cargo.toml  README.md
examples/: binomial_example_1.rs  binomial_example_2.rs  coins.tsv
src/: lib.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  cauchy.rs  chi.rs  chi_squared.rs  dirac.rs  erlang.rs  exp.rs  fisher_snedecor.rs  gamma.rs  geometric.rs  gumbel.rs  hypergeometric.rs  inverse_gamma.rs  laplace.rs  log_normal.rs  mod.rs  negative_binomial.rs  normal.rs  pareto.rs  poisson.rs  students_t.rs  triangular.rs  uniform.rs  weibull.rs
src/utils/: continuous1f1u.rs  continuous1f1u1f.rs  continuous2f.rs  continuous3f.rs  continuous4f.rs  discrete1u1f.rs  discrete1u2f.rs  discrete2u1f.rs  discrete4u.rs  evaluator1f1u.rs  evaluator1f1u1f.rs  evaluator1u1f.rs  evaluator1u2f.rs  evaluator2f.rs  evaluator2u1f.rs  evaluator3f.rs  evaluator4f.rs  evaluator4u.rs  factory1f.rs  factory1f1u.rs  factory1u.rs  factory1u1f.rs  factory2f.rs  factory2i.rs  factory3f.rs  factory3u.rs  mod.rs  register.rs
